Swagger and routes update
