# swagger.json
@@ -11,7 +11,7 @@
     "https"
   ],
   "paths": {
-    "/tickets/tickets": {
+    "/tickets/": {
       "post": {
         "description": "",
         "parameters": [
@@ -77,7 +77,7 @@
         }
       }
     },
-    "/tickets/tickets/{id}": {
+    "/tickets/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -98,7 +98,7 @@
         }
       }
     },
-    "/tickets/tickets/{id}/status": {
+    "/tickets/{id}/status": {
       "put": {
         "description": "",
         "parameters": [
@@ -134,7 +134,7 @@
         }
       }
     },
-    "/tickets/tickets/{id}/assign": {
+    "/tickets/{id}/assign": {
       "put": {
         "description": "",
         "parameters": [
@@ -170,7 +170,7 @@
         }
       }
     },
-    "/tickets/tickets/{id}/priority": {
+    "/tickets/{id}/priority": {
       "put": {
         "description": "",
         "parameters": [
